# mathgame

./: edu.apps.mathgame.json  meson.build
data/: edu.apps.mathgame.appdata.xml.in  edu.apps.mathgame.desktop.in  edu.apps.mathgame.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: main.py  mathgame.gresource.xml  mathgame.in  meson.build  window.py  window.ui
